[package]
name = "i3-autolayout"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Biagio Festa"]
edition = "2021"
description = "Service to automatically managing i3 window manager layout."
keywords = ["i3", "sway", "i3wm", "window-manager"]
repository = "https://github.com/BiagioFesta/i3-autolayout"
readme = "README.md"
exclude = ["img/*"]

[dependencies]
anyhow = { version = "1" }
i3_ipc = { version = "0.15" }
